[gd_scene load_steps=4 format=3 uid="uid://cbrklkevswkhh"]

[ext_resource type="TileSet" uid="uid://c58te50mwu883" path="res://Resources/BadAppleTerrainTileSet.tres" id="1_cl0gq"]
[ext_resource type="Script" path="res://Scripts/bad_apple_tile_map.gd" id="2_h5q81"]
[ext_resource type="Texture2D" uid="uid://bjlcffhqjiby" path="res://icon.svg" id="4_3grn6"]

[node name="BadAppleTileMap" type="TileMap"]
position = Vector2(202, 0)
tile_set = ExtResource("1_cl0gq")
format = 2
script = ExtResource("2_h5q81")

[node name="FrameTimer" type="Timer" parent="."]
wait_time = 0.033

[node name="StartPlayer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-202, 0)
texture = ExtResource("4_3grn6")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(950, 592)
texture = ExtResource("4_3grn6")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(950, 0)
texture = ExtResource("4_3grn6")
centered = false

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(-202, 592)
texture = ExtResource("4_3grn6")
centered = false

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(-202, 128)
texture = ExtResource("4_3grn6")
centered = false

[node name="Sprite2D6" type="Sprite2D" parent="."]
position = Vector2(950, 464)
texture = ExtResource("4_3grn6")
centered = false

[connection signal="timeout" from="FrameTimer" to="." method="_on_frame_timer_timeout"]
[connection signal="timeout" from="StartPlayer" to="." method="_on_start_player_timeout"]
